
Date: September 2 2016
Version: 2.18.0
Tag: DEV-AAVSO-02Sep2016
Key Changes:
- Ticket #523 Handle transformed flag correctly in AID load
- Ticket #536 Allow exponential format in mag, time values 
- Ticket #514 Remove all traces of JDBC from VStar (removed deprecated code)
- Ticket #364 Create VeLa: initial implementation of numeric expressions
- Ticket #331 Plot B-V index as a series
- Added WWZ and StarInfo scripting API functions.

Date: May 12 2016
Version: 2.17.1
Tag: DEV-AAVSO-12May2016
Key Changes:
- Ticket #514 Converted star group preferences to use VSX web service.
- Ticket #515 Load from AID: additive load being ignored.
- Ticket #516 Scripting API: load from AID needs to invoke plug-in method.
- Ticket #517 File dialog based observation source UI freeze:
- Ticket #518 Load from AID: DIFF and STEP MTypes not being ignored.
- Ticket #519 File dialog based observation source UI freeze.
- Ticket #520 Non-compliant Unicode chars in AID load causes parse failure.
- Ticket #521 Discrepant observation shown as "good".
  
Date: April 30 2016
Version: 2.17.0
Tag: DEV-AAVSO-30Apr2016
Key Changes:
- Ticket #510 VSX StarInfo and AID access: web service now used 
  instead of database access; enhanced AID load progress tracking, 
  task interruption, reliability (no timeouts) and performance; all
  observation sources are now treated as plug-ins.
- Ticket #421 Use J2000 epoch coordinates for HJD conversion: instead 
  of B1950; my appreciation as always to "Astronomical Algorithms" by 
  Jean Meeus.
- Ticket #386 Use web service for discrepant reporting.
- Thanks to Patrick Wills for web service development, Sara 
  Beck and Francis Hemsher for discussions, and Sara for help
  with testing the new discrepant reporting implementation. 
  
Date: January 11 2016
Version: 2.16.10
Tag: DEV-AAVSO-11Jan2016
Key Changes:
- Fixed bug in which raw mode polynomial fits gave errors; introduced after 
  adding phase plot mode polynomial fit feature in 2.16.9